# greymatter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  USER_GUIDE.md  board_manager.cpp  board_manager.hpp  cal_storage.cpp  dac_device.hpp  debug_spi.cpp  debug_spi.hpp  io_expander.cpp  io_expander.hpp  ltc2662.cpp  ltc2662.hpp  ltc2664.cpp  ltc2664.hpp  main.cpp  scpi_parser.cpp  scpi_parser.hpp  spi_manager.cpp  spi_manager.hpp  utils.hpp
docs/: USER_GUIDE.md
hardware/greymatter-mobo/: giona_8x8_carrier.kicad_sch  greymatter-mobo.kicad_pcb  greymatter-mobo.kicad_pro  greymatter-mobo.kicad_sch  greymatter-mobo_earlier_version.kicad_pcb  greymatter_comms.kicad_sch  greymatter_power.kicad_sch  microcyte_connector.kicad_sch
hardware/greymatter-mobo/giona_8x8_carrier/giona_carrier.pretty/: 8x8_carrier_connector.kicad_mod
hardware/greymatter-mobo/spice-simulation/: decoder_tree.asc  spi_routing_table.xlsx
hardware/greymatter-single/: greymatter-single.kicad_pcb  greymatter-single.kicad_pro  greymatter-single.kicad_sch
hardware/microcyte/: microcyte.kicad_pcb  microcyte.kicad_pro  microcyte.kicad_sch
hardware/microcyte/microcyte_logo.pretty/: astrocyte.kicad_mod  astrocyte_mirrored.kicad_mod  astrocyte_mirrored_inv.kicad_mod
hardware/microcyte/panelized_version/: microcyte_kikit_panelize_options.json  microcyte_panel.kicad_pro
hardware/pico2-spi-pmod/: pico2-spi-pmod.kicad_pcb  pico2-spi-pmod.kicad_pro  pico2-spi-pmod.kicad_sch
include/: board_manager.hpp  cal_storage.hpp  dac_device.hpp  io_expander.hpp  ltc2662.hpp  scpi_parser.hpp
python/greymatter/: calibration.py  components.py  controller.py
software/: CMakeLists.txt
software/include/: ltc2662.hpp  ltc2664.hpp
software/python/: greymatter_server.service.template  install_service.sh  pyproject.toml
software/python/greymatter/: __init__.py  __main__.py  controller.py  errors.py  server.py  spans.py  transport.py
software/src/: board_manager.cpp  io_expander.cpp  ltc2662.cpp  ltc2664.cpp  main.cpp
software/testing/: testing_commands.txt  testing_log.txt
software/testing/logic_waveforms/: DAC0_DAC1_SPAN_ALL_commands_trace.pvs  DAC0_DAC1_SPAN_ALL_commands_trace.sr  dacs_set_codes.pvs  initialization_sequence.pvs  initialization_sequence.sr
src/: CMakeLists.txt  board_manager.cpp  dac_device.cpp  ltc2662.cpp  ltc2664.cpp  main.cpp  scpi_parser.cpp  spi_manager.cpp  utils.cpp
testing/logic_waveforms/: dacs_set_codes.sr
